--- a/source/layout.html
+++ b/source/layout.html
@@ -579,18 +579,20 @@
         </div>
       </div>
     {% endif %}
+    {% comment %}
+      Manual array construction needed for themeFeatures for Liquid 3.0.6 since standard JSON filters 
+      (json, jsonify) don't work properly. This ensures proper JavaScript array 
+      formatting with quoted elements and commas.
+    {% endcomment %}
     <script>
-      {% comment %}
-        Manual array construction needed for Liquid 3.0.6 since standard JSON filters 
-        (json, jsonify) don't work properly. This ensures proper JavaScript array 
-        formatting with quoted elements and commas.
-      {% endcomment %}
       const themeFeatures = {
         optIns: [{% if theme.features.opt_ins %}{% for opt in theme.features.opt_ins %}"{{ opt }}"{% unless forloop.last %}, {% endunless %}{% endfor %}{% endif %}],
         optOuts: [{% if theme.features.opt_outs %}{% for opt in theme.features.opt_outs %}"{{ opt }}"{% unless forloop.last %}, {% endunless %}{% endfor %}{% endif %}],
       };
       const themeOptions = {
         heroButtonBehavior: "{{ theme.hero_button_behavior }}",
+        heroButtonLink: "{{ theme.hero_button_link }}",
+        heroImageLink: "{{ theme.hero_image_link }}",
         showSoldOutOptions: {{ theme.show_sold_out_product_options }},
         showLowInventoryMessages: {{ theme.show_low_inventory_messages }},
         lowInventoryMessage: "{{ t['products.low_inventory'] | replace: '"', '\"' | replace: "'", "\\'" }}",
