--- a/source/product.html
+++ b/source/product.html
@@ -139,6 +139,15 @@
         {% else %}
           {{ product.default_price | money: theme.money_format }}
         {% endif %}
+
+        {% if product.price_suffix != blank %}
+          {% if product.variable_pricing %}
+            {% assign formatted_suffix = '(' | append: product.price_suffix | append: ')' %}
+          {% else %}
+            {% assign formatted_suffix = product.price_suffix %}
+          {% endif %}
+          <span class="price-suffix">{{ formatted_suffix }}</span>
+        {% endif %}
       {% endcapture %}
       {% if product_status != blank %}<div class="product-detail__status {{ status_class }}">{{ product_status }}</div>{% endif %}
       <h1 class="page-title page-title--left product-detail__title">{{ product.name }}</h1>
@@ -283,6 +292,15 @@
                         {{ related_product.min_price | money: theme.money_format }} - {{ related_product.max_price | money: theme.money_format }}
                       {% else %}
                         {{ related_product.default_price | money: theme.money_format }}
+                      {% endif %}
+
+                      {% if related_product.price_suffix != blank %}
+                        {% if related_product.variable_pricing %}
+                          {% assign formatted_suffix = '(' | append: related_product.price_suffix | append: ')' %}
+                        {% else %}
+                          {% assign formatted_suffix = related_product.price_suffix %}
+                        {% endif %}
+                        <span class="price-suffix">{{ formatted_suffix }}</span>
                       {% endif %}
                     {% endunless %}
                   </div>
