--- a/source/home.html
+++ b/source/home.html
@@ -162,6 +162,13 @@
                           {% endif %}
                         {% endunless %}
                       </div>
+                      {% unless hide_price %}
+                        {% if product.options.size > 1 and theme.show_product_variant_count_in_grid %}
+                          <div class="product-list-thumb-options-description">
+                            {{ product.options.size }} {{ t['products.variants'] }}
+                          </div>
+                        {% endif %}
+                      {% endunless %}
                       {% if theme.featured_products_layout == 'alternating' %}
                         <button class="button product-list-shop-now">{{ t['navigation.shop'] }}</button>
                       {% endif %}
