--- a/source/products.html
+++ b/source/products.html
@@ -93,7 +93,13 @@
                     {% endif %}
                   {% endunless %}
                 </div>
-                {% if product_status != blank %}<div class="product-list-thumb-status {{ status_class }}">{{ product_status }}</div>{% endif %}
+                {% unless hide_price %}
+                  {% if product.options.size > 1 and theme.show_product_variant_count_in_grid %}
+                    <div class="product-list-thumb-options-description">
+                      {{ product.options.size }} {{ t['products.variants'] }}
+                    </div>
+                  {% endif %}
+                {% endunless %}
               </div>
             </a>
           </div>
