--- a/source/home.html
+++ b/source/home.html
@@ -76,7 +76,9 @@
         <div class="featured-message">{{ featured_text }}</div>
       {% endif %}
 
-      <h1 class="featured-title">{{ featured_header }}</h1>
+      {% if theme.featured_products > 0 %}
+        <h1 class="featured-title">{{ featured_header }}</h1>
+      {% endif %}
 
       {% if featured_text != blank and featured_text_position != "above" %}
         <div class="featured-message">{{ featured_text }}</div>
