--- a/source/home.html
+++ b/source/home.html
@@ -237,10 +237,10 @@
                       {% endif %}
                     {% endcapture %}
 
-                    <div class="product-list-image-container product-list-image-container-cover">
+                    <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
                       <img
                         alt=""
-                        class="blur-up product-list-image lazyload grid-cover"
+                        class="blur-up product-list-image lazyload grid-{{ theme.grid_image_style }}"
                         src="{{ product.image | product_image_url | constrain: 20 }}"
                         {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ aspect_ratio }}"{% endunless %}
                         data-srcset="
@@ -291,7 +291,7 @@
                     {% endif %}
 
                     <div
-                      class="product-list-image-container product-list-image-container-cover" 
+                      class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}" 
                       id="category-collage-{{ category.id }}"
                       data-image-urls='{{ image_urls | strip }}'
                       data-image-style="{{ theme.home_page_categories_image_style }}"
@@ -299,7 +299,7 @@
                       <!-- Default placeholder while image is being loaded -->
                       <img
                         alt=""
-                        class="blur-up product-list-image lazyload grid-cover"
+                        class="blur-up product-list-image lazyload grid-{{ theme.grid_image_style }}"
                         src="{{ first_product.image | product_image_url | constrain: 30 }}"
                         {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ aspect_ratio }}"{% endunless %}
                       >
