--- a/source/products.html
+++ b/source/products.html
@@ -70,7 +70,7 @@
                 {% if product_status != blank %}<div class="product-list-thumb-status {{ status_class }}">{{ product_status }}</div>{% endif %}
               </div>
               <div class="product-list-thumb-info">
-                <div class="product-list-thumb-name">{{ product.name }}</div>
+                <div class="product-list-thumb-name{% if theme.truncate_product_names_two_lines %} product-list-thumb-name--truncate{% endif %}">{{ product.name }}</div>
                 <div class="product-list-thumb-price">
                   {% assign hide_price = false %}
                   {% if product.status == 'sold-out' and theme.show_sold_out_product_prices == false %}
