fix: incorrect header logo image setting

--- a/source/layout.html
+++ b/source/layout.html
@@ -324,7 +324,7 @@
       </div>
     </div>
     <header data-bc-hook="header">
-      <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.header_logo != blank %}logo{% else %}text{% endif %}">
+      <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.logo_image != blank %}logo{% else %}text{% endif %}">
         {% if theme.logo_image != blank %}
           {% assign logo_image_height_1x = theme.logo_image_height %}
           {% assign logo_image_height_2x = logo_image_height_1x | times: 2 %}
