--- a/source/maintenance.html
+++ b/source/maintenance.html
@@ -9,7 +9,10 @@
   </head>
   <body class="maintenance-page">
     <main class="maintenance-content">
-      <h1>{{ store.name }}</h1>
+      {% if theme.maintenance_image.url != blank %}
+        <img src="{{ theme.maintenance_image.url }}" alt="Maintenance">
+      {% endif %}
+      {% if theme.show_shop_name_on_maintenance_page %}<h1 class="store-name">{{ store.name }}</h1>{% endif %}
       {% if theme.maintenance_message != blank %}<div class="maintenance-message">{{ theme.maintenance_message }}</div>{% endif %}
       {% if theme.instagram_url != blank
         or theme.tiktok_url != blank
