--- a/source/home.html
+++ b/source/home.html
@@ -72,15 +72,19 @@
       {% assign featured_text = theme.homepage_featured_text %}
       {% assign featured_text_position = theme.homepage_featured_text_position %}
       
-      {% if featured_text != blank and featured_text_position == "above" %}
-        <div class="featured-message">{{ featured_text }}</div>
+      {% comment %} Show featured text above when position is "above" OR when no featured products {% endcomment %}
+      {% if featured_text != blank %}
+        {% if featured_text_position == "above" or theme.featured_products == 0 %}
+          <div class="featured-message">{{ featured_text }}</div>
+        {% endif %}
       {% endif %}
 
       {% if theme.featured_products > 0 %}
         <h1 class="featured-title">{{ featured_header }}</h1>
       {% endif %}
 
-      {% if featured_text != blank and featured_text_position != "above" and theme.featured_products > 0 %}
+      {% comment %} Only show within if we have products AND position is within {% endcomment %}
+      {% if featured_text != blank and featured_text_position == "within" and theme.featured_products > 0 %}
         <div class="featured-message">{{ featured_text }}</div>
       {% endif %}
     </div>
