--- a/source/home.html
+++ b/source/home.html
@@ -66,15 +66,20 @@
 {% endif %}
 
 <div class="home-content">
+  {%- assign can_show_categories = false -%}
+  {%- if theme.featured_categories > 0 and categories.active.size > 0 -%}
+    {%- assign can_show_categories = true -%}
+  {%- endif -%}
+
   <div class="home-featured-products">
     <div class="featured-container">
       {% assign featured_header = t['home.featured'] %}
       {% assign featured_text = theme.homepage_featured_text %}
       {% assign featured_text_position = theme.homepage_featured_text_position %}
-      
-      {% comment %} Show featured text above when position is "above" OR when no featured products {% endcomment %}
+
+      {% comment %} Show featured text above when position is "above" OR when there are no featured products and no featured categories {% endcomment %}
       {% if featured_text != blank %}
-        {% if featured_text_position == "above" or theme.featured_products == 0 %}
+        {% if featured_text_position == "above" or (theme.featured_products == 0 and can_show_categories == false) %}
           <div class="featured-message">{{ featured_text }}</div>
         {% endif %}
       {% endif %}
@@ -200,10 +205,6 @@
       {% endpaginate %}
     {% endif %}
   </div>
-  {%- assign can_show_categories = false -%}
-  {%- if theme.featured_categories > 0 and categories.active.size > 0 -%}
-    {%- assign can_show_categories = true -%}
-  {%- endif -%}
   {% if can_show_categories %}
     {% assign category_collages_enabled = false %}
     {% if theme.features.has_theme_category_collages %}
