--- a/source/maintenance.html
+++ b/source/maintenance.html
@@ -9,8 +9,8 @@
   </head>
   <body class="maintenance-page">
     <main class="maintenance-content">
-      {% if theme.maintenance_image.url != blank %}
-        <img src="{{ theme.maintenance_image.url }}" alt="Maintenance">
+      {% if theme.images.maintenance_image != blank %}
+        <img src="{{ theme.images.maintenance_image.url | constrain: 800 }}" alt="" loading="lazy">
       {% endif %}
       <h1 class="store-name {% if theme.show_shop_name_on_maintenance_page == false %}visually-hidden{% endif %}">{{ store.name }}</h1>
       {% if theme.maintenance_message != blank %}<div class="maintenance-message">{{ theme.maintenance_message }}</div>{% endif %}
